sumo/tests/sumo/errors/network/edges/root__edges__one_double/errors.sumo
Error: Another edge with the id '1' exists.
Error: The number of edges in the list mismatches the edge count.
Quitting (on error).
